[package]
name = "gclone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
color-eyre = "0.6.2"
directories = "4.0.1"
env_logger = "0.9.0"
eyre = "0.6.8"
inquire = "0.2.1"
log = "0.4.17"
tokei = "12.1.2"
url = { version = "2.2.2", default-features = false }
