[package]
name = "gclone"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/nickorta12/gclone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
color-eyre = "0.6.2"
directories = "5.0.0"
env_logger = "0.10.0"
eyre = "0.6.8"
inquire = "0.6.0"
log = "0.4.17"
tokei = "12.1.2"
url = { version = "2.3.1", default-features = false }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
